--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
 <body>
   <div id="root"></div>
+  <script type='text/javascript' src='config.js'></script>
   <script type="module" src="/src/main.jsx"></script>
   <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 </body>
